# testRaylibRenderer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.c  main.cpp
build-x86/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  raylib_test
build-x86/resources/objects/: sphere.glb
build-x86/resources/shaders/: hdr.fs
resources/shaders/: blur.fs  emissive.fs  fxaa.fs  hdr.fs  mouse_color.fs  phong.fs  skybox.fs
